--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <title>UNO</title>
 </head>
 <body>
+    <div class="card"></div>
     <div id="userCardBox">
 
     </div>
@@ -30,6 +31,9 @@
 
     </div>
     <div class="cpuCardBox" id="cpu3">
+
+    </div>
+    <div id="deck">
 
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
