--- a/index.html
+++ b/index.html
@@ -20,21 +20,33 @@
     <title>UNO</title>
 </head>
 <body>
-    <div class="card"></div>
     <div id="userCardBox">
-
+        <div class="cardFaceUp red"><div class="oval"></div><img src="icons/0_red.png" alt=""></div>
+        <div class="cardFaceUp red"><div class="oval"></div></div>
+        <div class="cardFaceUp red"><div class="oval"></div></div>
+        <div class="cardFaceUp red"><div class="oval"></div></div>
+        <div class="cardFaceUp red"><div class="oval"></div></div>
+        <div class="cardFaceUp red"><div class="oval"></div></div>
+        <div class="cardFaceUp red"><div class="oval"></div></div>
     </div>
     <div class="cpuCardBox" id="cpu1">
-        
+        <div class="cardFaceDown black"><div class="oval red"></div></div>
+        <div class="cardFaceDown black"><div class="oval red"></div></div>
+        <div class="cardFaceDown black"><div class="oval red"></div></div>
     </div>
     <div class="cpuCardBox" id="cpu2">
-
+        <div class="cardFaceDown black"><div class="oval red"></div></div>
+        <div class="cardFaceDown black"><div class="oval red"></div></div>
+        <div class="cardFaceDown black"><div class="oval red"></div></div>
     </div>
     <div class="cpuCardBox" id="cpu3">
-
+        <div class="cardFaceDown black"><div class="oval red"></div></div>
+        <div class="cardFaceDown black"><div class="oval red"></div></div>
+        <div class="cardFaceDown black"><div class="oval red"></div></div>
     </div>
     <div id="deck">
-
+        <div class="cardFaceDown black"><div class="oval red"></div></div>
+        <div class="cardFaceDown black"><div class="oval red"></div></div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.7/dist/umd/popper.min.js" integrity="sha384-zYPOMqeu1DAVkHiLqWBUTcbYfZ8osu1Nd6Z89ify25QV9guujx43ITvfi12/QExE" crossorigin="anonymous"></script>
