trying to set up random cpu names

--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
 </head>
 <body>
     <div id="userCardBox">
+        <!-- <div class="cardFaceUp red"><div class="oval"></div><img src="icons/0_red.png" alt=""></div>
         <div class="cardFaceUp red"><div class="oval"></div><img src="icons/0_red.png" alt=""></div>
-        <div class="cardFaceUp red"><div class="oval"></div></div>
-        <div class="cardFaceUp red"><div class="oval"></div></div>
-        <div class="cardFaceUp red"><div class="oval"></div></div>
-        <div class="cardFaceUp red"><div class="oval"></div></div>
-        <div class="cardFaceUp red"><div class="oval"></div></div>
-        <div class="cardFaceUp red"><div class="oval"></div></div>
+        <div class="cardFaceUp red"><div class="oval"></div><img src="icons/0_red.png" alt=""></div>
+        <div class="cardFaceUp red"><div class="oval"></div><img src="icons/0_red.png" alt=""></div>
+        <div class="cardFaceUp red"><div class="oval"></div><img src="icons/0_red.png" alt=""></div>
+        <div class="cardFaceUp red"><div class="oval"></div><img src="icons/0_red.png" alt=""></div>
+        <div class="cardFaceUp red"><div class="oval"></div><img src="icons/0_red.png" alt=""></div> -->
     </div>
     <div class="cpuCardBox" id="cpu1">
         <div class="cardFaceDown black"><div class="oval red"></div></div>
