--- a/index.html
+++ b/index.html
@@ -53,21 +53,21 @@
         <div class="cardFaceUp red"><div class="oval"></div><img src="icons/0_red.png" alt=""></div> -->
     </div>
     <div class="cpuCardBox" id="cpu1">
-      <p class="nickname">Joe Mama</p>
+      <p class="nickname"></p>
       <span class="count">7</span>
       <div class="cardFaceDown black"><div class="oval red"></div></div>
       <div class="cardFaceDown black"><div class="oval red"></div></div>
       <div class="cardFaceDown black"><div class="oval red"></div></div>
     </div>
     <div class="cpuCardBox" id="cpu2">
-      <p class="nickname">Angie Daddy</p>
+      <p class="nickname"></p>
       <span class="count">7</span>
       <div class="cardFaceDown black"><div class="oval red"></div></div>
       <div class="cardFaceDown black"><div class="oval red"></div></div>
       <div class="cardFaceDown black"><div class="oval red"></div></div>
     </div>
     <div class="cpuCardBox" id="cpu3">
-      <p class="nickname">Candice Deek</p>
+      <p class="nickname"></p>
       <span class="count">7</span>
       <div class="cardFaceDown black"><div class="oval red"></div></div>
       <div class="cardFaceDown black"><div class="oval red"></div></div>
