--- a/index.html
+++ b/index.html
@@ -80,6 +80,41 @@
         <div class="cardFaceDown black"><div class="oval red"></div></div>
       </div>
     </div>
+    <!-- Button trigger modal -->
+    <button
+      type="button"
+      class="btn btn-primary"
+      data-bs-toggle="modal"
+      data-bs-target="#wildModal"
+    >
+      Launch static backdrop modal
+    </button>
+
+    <!-- Modal -->
+    <div
+      class="modal fade"
+      id="wildModal"
+      data-bs-backdrop="static"
+      data-bs-keyboard="false"
+      tabindex="-1"
+      aria-labelledby="staticBackdropLabel"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-body">
+            <div id="wildCardBox">
+              <div class="cardFaceUp red">
+                <div class="oval"></div>
+              </div>
+              <div class="cardFaceUp blue"><div class="oval"></div></div>
+              <div class="cardFaceUp green"><div class="oval"></div></div>
+              <div class="cardFaceUp yellow"><div class="oval"></div></div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
