--- a/index.html
+++ b/index.html
@@ -102,6 +102,11 @@
     >
       <div class="modal-dialog">
         <div class="modal-content">
+          <div class="modal-header">
+            <h1 class="modal-title fs-5" id="staticBackdropLabel">
+              Select a Color
+            </h1>
+          </div>
           <div class="modal-body">
             <div id="wildCardBox">
               <div class="cardFaceUp red">
