--- a/index.html
+++ b/index.html
@@ -43,15 +43,7 @@
     <title>UNO</title>
   </head>
   <body>
-    <div id="userCardBox">
-      <!-- <div class="cardFaceUp red"><div class="oval"></div><img src="icons/0_red.png" alt=""></div>
-        <div class="cardFaceUp red"><div class="oval"></div><img src="icons/0_red.png" alt=""></div>
-        <div class="cardFaceUp red"><div class="oval"></div><img src="icons/0_red.png" alt=""></div>
-        <div class="cardFaceUp red"><div class="oval"></div><img src="icons/0_red.png" alt=""></div>
-        <div class="cardFaceUp red"><div class="oval"></div><img src="icons/0_red.png" alt=""></div>
-        <div class="cardFaceUp red"><div class="oval"></div><img src="icons/0_red.png" alt=""></div>
-        <div class="cardFaceUp red"><div class="oval"></div><img src="icons/0_red.png" alt=""></div> -->
-    </div>
+    <div id="userCardBox"></div>
     <div class="cpuCardBox" id="cpu1">
       <p class="nickname"></p>
       <span class="count">7</span>
@@ -103,18 +95,40 @@
       <div class="modal-dialog">
         <div class="modal-content">
           <div class="modal-header">
-            <h1 class="modal-title fs-5" id="staticBackdropLabel">
+            <h1 class="modal-title fs-4 m-auto" id="staticBackdropLabel">
               Select a Color
             </h1>
           </div>
           <div class="modal-body">
             <div id="wildCardBox">
-              <div class="cardFaceUp red">
-                <div class="oval"></div>
+              <div
+                class="cardFaceUp red"
+                data-bs-toggle="modal"
+                data-bs-target="#wildModal"
+              >
+                <!-- <div class="oval"></div> -->
               </div>
-              <div class="cardFaceUp blue"><div class="oval"></div></div>
-              <div class="cardFaceUp green"><div class="oval"></div></div>
-              <div class="cardFaceUp yellow"><div class="oval"></div></div>
+              <div
+                class="cardFaceUp blue"
+                data-bs-toggle="modal"
+                data-bs-target="#wildModal"
+              >
+                <!-- <div class="oval"></div> -->
+              </div>
+              <div
+                class="cardFaceUp green"
+                data-bs-toggle="modal"
+                data-bs-target="#wildModal"
+              >
+                <!-- <div class="oval"></div> -->
+              </div>
+              <div
+                class="cardFaceUp yellow"
+                data-bs-toggle="modal"
+                data-bs-target="#wildModal"
+              >
+                <!-- <div class="oval"></div> -->
+              </div>
             </div>
           </div>
         </div>
