removed modal testing button

--- a/index.html
+++ b/index.html
@@ -73,14 +73,14 @@
       </div>
     </div>
     <!-- Button trigger modal -->
-    <button
+    <!-- <button
       type="button"
       class="btn btn-primary"
       data-bs-toggle="modal"
       data-bs-target="#wildModal"
     >
       Launch static backdrop modal
-    </button>
+    </button> -->
 
     <!-- Modal -->
     <div
@@ -105,30 +105,22 @@
                 class="cardFaceUp red"
                 data-bs-toggle="modal"
                 data-bs-target="#wildModal"
-              >
-                <!-- <div class="oval"></div> -->
-              </div>
+              ></div>
               <div
                 class="cardFaceUp blue"
                 data-bs-toggle="modal"
                 data-bs-target="#wildModal"
-              >
-                <!-- <div class="oval"></div> -->
-              </div>
+              ></div>
               <div
                 class="cardFaceUp green"
                 data-bs-toggle="modal"
                 data-bs-target="#wildModal"
-              >
-                <!-- <div class="oval"></div> -->
-              </div>
+              ></div>
               <div
                 class="cardFaceUp yellow"
                 data-bs-toggle="modal"
                 data-bs-target="#wildModal"
-              >
-                <!-- <div class="oval"></div> -->
-              </div>
+              ></div>
             </div>
           </div>
         </div>
