--- a/index.html
+++ b/index.html
@@ -72,17 +72,8 @@
         <div class="cardFaceDown black"><div class="oval red"></div></div>
       </div>
     </div>
-    <!-- Button trigger modal -->
-    <!-- <button
-      type="button"
-      class="btn btn-primary"
-      data-bs-toggle="modal"
-      data-bs-target="#wildModal"
-    >
-      Launch static backdrop modal
-    </button> -->
 
-    <!-- Modal -->
+    <!-- Wild Color Selection Modal -->
     <div
       class="modal fade"
       id="wildModal"
@@ -126,6 +117,28 @@
         </div>
       </div>
     </div>
+    <!-- Game Over Modal -->
+    <div
+      class="modal fade"
+      id="gameOverModal"
+      data-bs-backdrop="static"
+      data-bs-keyboard="false"
+      tabindex="-1"
+      aria-labelledby="staticBackdropLabel"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h1 class="modal-title fs-4 m-auto" id="staticBackdropLabel"></h1>
+          </div>
+          <div class="modal-body">
+            <button onclick="location.reload()">Restart</button>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
